Collapsable side bar with left justified logo and site name which remain fixed on scroll

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,8 @@ a, a:hover, a:focus {
     transform-origin: bottom left;
 }
 
+
+
 #sidebar.active {
     margin-left: -250px;
     transform: rotateY(100deg);
@@ -235,4 +237,28 @@ a.article, a.article:hover {
         transform: rotate(-45deg) translate(1px, -1px);
     }
 
+}
+/*____________Fade_______________*/
+#navbar {
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: block;
+  transition: top 0.3s;
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 15px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
 }
